--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/index.html.twig
@@ -7,43 +7,41 @@
 {%- endblock title %}
 
 {% block body %}
-    <div id="col-left" class="two-cols-content">
 
-        {# Breadcrumb #}
-        {% include "_includes/breadcrumb.html.twig" %}
+    {# Breadcrumb #}
+    {% include "_includes/breadcrumb.html.twig" %}
 
-        <div class="contenu-page">
+    <div class="contenu-page">
 
-            {% if entities is not empty %}
-                {% for entity in entities %}
+        {% if entities is not empty %}
+            {% for entity in entities %}
 
-                    {# articles #}
-                    <article class="blog-article{% if loop.first %} first{% endif %}{% if loop.last %} last{% endif %}">
-                        {% include "AmlBlogBundle::Blog/article.html.twig" %}
-                    </article>
+                {# articles #}
+                <article class="blog-article{% if loop.first %} first{% endif %}{% if loop.last %} last{% endif %}">
+                    {% include "AmlBlogBundle::Blog/article.html.twig" %}
+                </article>
 
-                {% endfor %}
+            {% endfor %}
 
-                {# Pagination #}
-                {% include "AmlBlogBundle::Blog/pagination.html.twig" %}
+            {# Pagination #}
+            {% include "AmlBlogBundle::Blog/pagination.html.twig" %}
 
-            {% else %}
-                <h1>Blog</h1>
-                <p>Aucun article de blog publié.</p>
-            {% endif %}
-        </div>
-
+        {% else %}
+            <h1>Blog</h1>
+            <p>Aucun article de blog publié.</p>
+        {% endif %}
     </div>
-    <div id="col-right">
 
-        {# Liste des catégories #}
-        <div class="side-bloc no-border">
-            {% include "AmlBlogBundle::Blog/blocCategories.html.twig" %}
-        </div>
-
-        {# Liste des tags #}
-        <div class="side-bloc">
-            {% include "AmlBlogBundle::Blog/blocTags.html.twig" %}
-        </div>
-    </div>
 {% endblock body %}
+
+{% block columnRight %}
+    {# Liste des catégories #}
+    <div class="side-bloc no-border">
+        {% include "AmlBlogBundle::Blog/blocCategories.html.twig" %}
+    </div>
+
+    {# Liste des tags #}
+    <div class="side-bloc">
+        {% include "AmlBlogBundle::Blog/blocTags.html.twig" %}
+    </div>
+{% endblock columnRight %}
