--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/show.html.twig
@@ -6,60 +6,58 @@
 
 {% block body %}
 
-    <div id="col-left" class="two-cols-content">
+    {# Breadcrumb #}
+    {% include "_includes/breadcrumb.html.twig" %}
 
-        {# Breadcrumb #}
-        {% include "_includes/breadcrumb.html.twig" %}
+    <article class="blog-article">
+        <h2>{{ entity.title }}</h2>
 
-        <article class="blog-article">
-            <h2>{{ entity.title }}</h2>
-
-            <div class="publi-info">
+        <div class="publi-info">
 			<span>Publié le 
 				<span class="date-article-block">{% if entity.created %}{{ entity.created|date('d/m/Y à H:i') }}{% endif %}</span>
 			</span>
+        </div>
+
+        {% if entity.logo %}
+            <div class="blog-visuel">
+                <a class="thumbnail" rel="prettyPhoto"
+                   href="{{ asset(entity.logo.webpath) | imagine_filter('modal_img') }}">
+                    <img src="{{ asset(entity.logo.webpath) | imagine_filter('blog_view') }}"
+                         alt="" title="{{ entity.logo.title }}"
+                         class="imagecache imagecache-blog_view" width="588"/>
+                </a>
             </div>
+        {% endif %}
 
-            {% if entity.logo %}
-                <div class="blog-visuel">
-                    <a class="thumbnail" rel="prettyPhoto"
-                       href="{{ asset(entity.logo.webpath) | imagine_filter('modal_img') }}">
-                        <img src="{{ asset(entity.logo.webpath) | imagine_filter('blog_view') }}"
-                             alt="" title="{{ entity.logo.title }}"
-                             class="imagecache imagecache-blog_view" width="588"/>
-                    </a>
-                </div>
-            {% endif %}
+        {% if entity.video %}
+            <iframe id="ytplayer" type="text/html" width="640" height="360"
+                    src="https://www.youtube.com/embed/{{ entity.video.providerId }}?html5=1"
+                    frameborder="0"
+                    allowfullscreen="true">
+            </iframe>
+        {% endif %}
 
-            {% if entity.video %}
-                <iframe id="ytplayer" type="text/html" width="640" height="360"
-                        src="https://www.youtube.com/embed/{{ entity.video.providerId }}?html5=1"
-                        frameborder="0"
-                        allowfullscreen="true">
-                </iframe>
-            {% endif %}
+        <div class="article-description">{{ entity.body|raw }}</div>
 
-            <div class="article-description">{{ entity.body|raw }}</div>
+        {% if entity.tags is not empty %}
+            <span class="blog-tags">Mots clés : </span>
+            {% for key,tag in entity.tags %}
+                {% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}"
+                                                href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
+            {% endfor %}
+        {% endif %}
+    </article>
 
-            {% if entity.tags is not empty %}
-                <span class="blog-tags">Mots clés : </span>
-                {% for key,tag in entity.tags %}
-                    {% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}"
-                                                    href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
-                {% endfor %}
-            {% endif %}
-        </article>
-
-    </div>
-    <div id="col-right">
-        {# Liste des catégories #}
-        <div class="side-bloc no-border">
-            {% include "AmlBlogBundle::Blog/blocCategories.html.twig" %}
-        </div>
-
-        {# Liste des tags #}
-        <div class="side-bloc">
-            {% include "AmlBlogBundle::Blog/blocTags.html.twig" %}
-        </div>
-    </div>
 {% endblock body %}
+
+{% block columnRight %}
+    {# Liste des catégories #}
+    <div class="side-bloc no-border">
+        {% include "AmlBlogBundle::Blog/blocCategories.html.twig" %}
+    </div>
+
+    {# Liste des tags #}
+    <div class="side-bloc">
+        {% include "AmlBlogBundle::Blog/blocTags.html.twig" %}
+    </div>
+{% endblock columnRight %}
