Facebook | fix block

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
 <body>
 <div id="global">
     {# Header #}
-    {{ include '_includes/header.html.twig' }}
+    {{ include('_includes/header.html.twig') }}
 
     <section id="contenu">
 
@@ -76,7 +76,7 @@
     <div class="clearfooter"></div>
 
     {# Footer #}
-    {{ include '_includes/footer.html.twig' }}
+    {{ include('_includes/footer.html.twig') }}
 </div>
 
 {% block javascripts %}{% endblock %}
