--- a/app/Resources/views/_includes/header.html.twig
+++ b/app/Resources/views/_includes/header.html.twig
@@ -18,7 +18,7 @@
     {% endif %}
 
     {# Menu #}
-    {% include "_includes/menu.html.twig" %}
+    {{ include('_includes/menu.html.twig') }}
 
 </header><!-- /Header -->
 
