UsersBundle | update templates

--- a/src/Aml/Bundle/UsersBundle/Resources/views/Profile/show.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Profile/show.html.twig
@@ -1,4 +1,5 @@
-{% extends "Aml\Bundle\UsersBundle::members-layout.html.twig" %}
+{% extends '@AmlUsers/members-layout.html.twig' %}
+
 
 {% block title -%}
     Espace membres - Show Profile
