--- a/src/Aml/Bundle/UsersBundle/Resources/views/Members/list.html.twig
+++ b/src/Aml/Bundle/UsersBundle/Resources/views/Members/list.html.twig
@@ -1,4 +1,4 @@
-{% extends "Aml\Bundle\UsersBundle::members-layout.html.twig" %}
+{% extends '@AmlUsers/members-layout.html.twig' %}
 
 {% block title -%}
     Espace membres - Listes des membres
