--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
@@ -1,13 +1,9 @@
 {% if lastBlogArticle %}
     <article id="blog-last-article-block" class="blog-article">
         <h3>
-            {% if lastBlogArticle.url.urlKey is defined and lastBlogArticle.url.urlKey is not empty %}
-                <a href="{{ path('blog_show_rewrite', { 'url_key': lastBlogArticle.url.urlKey }) }}"
-                   title="Voir l'article : {{ lastBlogArticle.title }}">{{ lastBlogArticle.title }}</a>
-            {% else %}
-                <a href="{{ path('blog_show', { 'id': lastBlogArticle.id }) }}"
-                   title="Voir l'article : {{ lastBlogArticle.title }}">{{ lastBlogArticle.title }}</a>
-            {% endif %}
+            <a href="{{ path('blog_show', { 'slug': lastBlogArticle.slug }) }}"
+               title="Voir l'article : {{ lastBlogArticle.title }}">{{ lastBlogArticle.title }}</a>
+
         </h3>
 
         <div class="publi-info">
@@ -33,13 +29,9 @@
 
         <p class="container-wysiwyg">
             {{ lastBlogArticle.body|wordWarp }}
-            {% if lastBlogArticle.url.urlKey is defined and lastBlogArticle.url.urlKey is not empty %}
-                <a href="{{ path('blog_show_rewrite', { 'url_key': lastBlogArticle.url.urlKey }) }}"
-                   title="Lire l'article : {{ lastBlogArticle.title }}">Lire la suite</a>
-            {% else %}
-                <a href="{{ path('blog_show', { 'id': lastBlogArticle.id }) }}"
-                   title="Lire l'article : {{ lastBlogArticle.title }}">Lire la suite</a>
-            {% endif %}
+
+            <a href="{{ path('blog_show', { 'slug': lastBlogArticle.slug }) }}"
+               title="Lire l'article : {{ lastBlogArticle.title }}">Lire la suite</a>
         </p>
 
         {% if lastBlogArticle.tags is not empty %}
