--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/sitemap.xml.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/sitemap.xml.twig
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?xml-stylesheet type="text/xsl" href="{{ asset("sitemap.xsl") }}"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     {% for url in urls %}
-        <url>{# check if hostname is not alreay in url#}
+        <url>
+            {# check if hostname is not alreay in url#}
             <loc>{% if url.loc|replace({hostname:''}) == url.loc %}{{ hostname }}{{ url.loc }}{% else %}{{ url.loc }}{% endif %}</loc>
             {% if url.lastmod is defined %}
                 <lastmod>{{ url.lastmod }}</lastmod>
