--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -17,25 +17,15 @@
             {% for key,entity in entities %}
 
                 <li class="event-item">
-                        <span class="date">{{ entity.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }}
-                            :</span>
-
+                    <span class="date">{{ entity.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }} :</span>
                     <h2>
-                        {% if entity.url.urlKey is defined and entity.url.urlKey is not empty %}
-                            <a href="{{ path('agenda_show_event_rewrite', { 'url_key': entity.url.urlKey }) }}"
-                               title="{{ entity.title }}">{{ entity.title }}</a>
-                        {% else %}
-                            <a href="{{ path('agenda_show_event', { 'id': entity.id }) }}"
-                               title="{{ entity.title }}">{{ entity.title }}</a>
-                        {% endif %}
+                        <a href="{{ path('agenda_show_event', { 'slug': entity.slug }) }}"
+                           title="{{ entity.title }}">{{ entity.title }}</a>
                     </h2>
                 </li>
-
             {% endfor %}
         </ul>
-
     </article>
-
 {% endblock body %}
 
 {% block columnRight %}
