--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/index.html.twig
@@ -10,21 +10,20 @@
     {% include "_includes/breadcrumb.html.twig" %}
 
     <article class="contenu-page">
-
         <h1>Agenda</h1>
 
         <ul id="agenda-concerts-public">
-            {% for key,entity in entities %}
-
+            {% for event in entities %}
                 <li class="event-item">
-                    <span class="date">{{ entity.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }} :</span>
+                    <span class="date">{{ event.dateStart | format_date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }} :</span>
                     <h2>
-                        <a href="{{ path('agenda_show_event', { 'slug': entity.slug }) }}"
-                           title="{{ entity.title }}">{{ entity.title }}</a>
+                        <a href="{{ path('agenda_show_event', { 'slug': event.slug }) }}"
+                           title="{{ event.title }}">{{ event.title }}</a>
                     </h2>
                 </li>
             {% endfor %}
         </ul>
+
     </article>
 {% endblock body %}
 
