--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/show.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Discography/show.html.twig
@@ -19,11 +19,13 @@
         <div class="disc-presentation">
 
             <div class="disc-pochette-list">
+                {% if entity.image is not empty %}
                 <a rel="prettyPhoto" href="{{ asset(entity.image.webpath) | imagine_filter('modal_img') }}">
                     <img src="{{ asset(entity.image.webpath) | imagine_filter('discography_list') }}"
                          alt="{{ entity.image.title }}" title="{{ entity.image.title }}"
                          class="imagecache imagecache-pochette-album" width="180" height="160">
                 </a>
+                {% endif %}
             </div>
 
             <div class="disc-description-list">
