--- a/src/Aml/Bundle/BlogBundle/Resources/views/Blog/blocTags.html.twig
+++ b/src/Aml/Bundle/BlogBundle/Resources/views/Blog/blocTags.html.twig
@@ -4,7 +4,9 @@
     <li><a class="active" title="Tous les articles" href="{{ path('blog') }}">Tous</a></li>
     {% for tag in tags %}
         <li><a class="active" title="Mot-clé : {{ tag.name }}"
-               href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a> ({{ tag.articles|length }})
+               href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
+
+            ({{ tag.articles|length }})
         </li>
     {% endfor %}
 </ul>
