--- a/app/Resources/views/blog/blocs/blocTags.html.twig
+++ b/app/Resources/views/blog/blocs/blocTags.html.twig
@@ -3,10 +3,11 @@
 <ul id="bloc-blog-categorie">
     <li><a class="active" title="Tous les articles" href="{{ path('blog') }}">Tous</a></li>
     {% for tag in tags %}
-        <li><a class="active" title="Mot-clé : {{ tag.name }}"
-               href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
-
-            ({{ tag.articles|length }})
+        <li>
+            <a class="active" title="Mot-clé : {{ tag.name }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">
+                {{ tag.name }}
+            </a>
+            ({{ tag.nbArticles }})
         </li>
     {% endfor %}
 </ul>
