--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
 
     {# Dernier article du blog #}
-    {% include "AmlWebBundle::Default/article.html.twig" %}
+    {% include "default/article.html.twig" %}
 
     {# Dernier Album #}
-    {% include "AmlWebBundle::Default/album.html.twig" %}
+    {% include "default/album.html.twig" %}
 
 {%- endblock body %}
