--- a/app/Resources/views/blog/blocs/blocCategories.html.twig
+++ b/app/Resources/views/blog/blocs/blocCategories.html.twig
@@ -3,8 +3,11 @@
 <ul id="bloc-blog-categorie">
     <li><a class="active" title="Tous les articles" href="{{ path('blog') }}">Tous</a></li>
     {% for category in categories %}
-        <li><a class="active" title="{{ category.description }}"
-               href="{{ path('blog',{'category' : category.systemName}) }}">{{ category.name }}</a>
+        <li>
+            <a class="active" title="{{ category.description }}"
+               href="{{ path('blog',{'category' : category.systemName}) }}">
+                {{ category.name }}
+            </a>
             ({{ category.nbArticles }})
         </li>
     {% endfor %}
