--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -15,7 +15,7 @@
         pour vous joindre à nous ou encore à nous contacter pour organiser des concerts.</p>
 
     {# Map #}
-    {% include "AmlContactUsBundle::Default/index/google-map.html.twig" %}
+    {% include "contact/index/google-map.html.twig" %}
 
     <div id="bloc-coordonnees">
         <h3>Téléphone</h3>
@@ -28,6 +28,6 @@
     </div>
 
     {# Contact Form #}
-    {% include "AmlContactUsBundle::Default/index/contact-form.html.twig" %}
+    {% include "contact/index/contact-form.html.twig" %}
 
 {%- endblock body %}
