Refacto - merge bundle evenements and web

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,7 +58,7 @@
                 {% block columnRight %}
 
                     {# Next Concert #}
-                    {{ render(controller('AmlEvenementsBundle:Agenda:nextConcert')) }}
+                    {{ render(controller('AmlWebBundle:Agenda:nextConcert')) }}
 
                     {# Block Facebook #}
                     {{ include('blocs/facebook-page-plugin.html.twig') }}
