--- a/app/Resources/views/members/index.html.twig
+++ b/app/Resources/views/members/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'members/members-layout.html.twig' %}
+{% extends 'members/members_layout.html.twig' %}
 
 {% block title -%}
     Espace membres
