--- a/app/Resources/views/blog/show.html.twig
+++ b/app/Resources/views/blog/show.html.twig
@@ -53,11 +53,11 @@
 {% block columnRight %}
     {# Liste des catégories #}
     <div class="side-bloc no-border">
-        {% include "blog/blocs/blocCategories.html.twig" %}
+        {% include "blog/blocs/bloc_categories.html.twig" %}
     </div>
 
     {# Liste des tags #}
     <div class="side-bloc">
-        {% include "blog/blocs/blocTags.html.twig" %}
+        {% include "blog/blocs/bloc_tags.html.twig" %}
     </div>
 {% endblock columnRight %}
