Members | fix template inclusions

--- a/app/Resources/views/members/list.html.twig
+++ b/app/Resources/views/members/list.html.twig
@@ -1,4 +1,4 @@
-{% extends '@AmlUsers/members_layout.html.twig' %}
+{% extends 'members/members_layout.html.twig' %}
 
 {% block title -%}
     Espace membres - Listes des membres
