--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -1,5 +1,4 @@
-{% extends '@AmlUsers/members-layout.html.twig' %}
-
+{% extends 'members/members_layout.html.twig' %}
 
 {% block title -%}
     Espace membres - Edit Profile
