--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,10 +20,9 @@
     <!-- Le styles -->
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
-    <link href="{{ asset('build/global.css') }}" rel="stylesheet"/>
-
-
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
 
     {% block headerJs %}{% endblock %}
 
@@ -62,7 +61,7 @@
                 {% block columnRight %}
 
                     {# Next Concert #}
-                    {{ render(controller('App\\Controller\\AgendaController::nextConcert')) }}
+                    {#{{ render(controller('App\\Controller\\AgendaController::nextConcert')) }}#}
 
                     {# Block Facebook #}
                     {{ include('blocs/facebook_page_plugin.html.twig') }}
@@ -77,7 +76,8 @@
     {{ include('_includes/footer.html.twig') }}
 </div>
 
-<script src="{{ asset('build/app.js') }}" type="text/javascript"></script>
-{% block javascripts %}{% endblock %}
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock %}
 </body>
 </html>
