Controller: fix uprade symfony 4.2

--- a/templates/_includes/menu.html.twig
+++ b/templates/_includes/menu.html.twig
@@ -3,5 +3,5 @@
 	Description : Tempalate pour le menu
 #}
 <nav id="menu">
-    {{ knp_menu_render('main') }}
+    {{ knp_menu_render('app_main_menu') }}
 </nav>
