--- a/templates/_includes/breadcrumb.html.twig
+++ b/templates/_includes/breadcrumb.html.twig
@@ -1,1 +1,1 @@
-{{ knp_menu_render('breadcrumb',{'currentAsLink':false,'template': 'Menu/knp_menu.html.twig' }) }}
+{{ knp_menu_render('app_breadcrumb', {'currentAsLink':false, 'template': 'Menu/knp_menu.html.twig'}) }}
