--- a/templates/agenda/index.html.twig
+++ b/templates/agenda/index.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
     {# Breadcrumb #}
-    {% include "_includes/breadcrumb.html.twig" %}
+    {#{% include "_includes/breadcrumb.html.twig" %}#}
 
     <article class="contenu-page">
         <h1>Agenda</h1>
@@ -15,7 +15,7 @@
         <ul id="agenda-concerts-public">
             {% for event in entities %}
                 <li class="event-item">
-                    <span class="date">{{ event.dateStart | date('EEEE d MMMM Y', 'fr', 'Europe/Paris') }} :</span>
+                    <span class="date">{{ event.dateStart | date('EEEE d MMMM Y') }} :</span>
                     <h2>
                         <a href="{{ path('agenda_show_event', { 'slug': event.slug }) }}"
                            title="{{ event.title }}">{{ event.title }}</a>
