--- a/templates/agenda/index.html.twig
+++ b/templates/agenda/index.html.twig
@@ -15,7 +15,8 @@
         <ul id="agenda-concerts-public">
             {% for event in entities %}
                 <li class="event-item">
-                    <span class="date">{{ event.dateStart | date('d F Y') }} :</span>
+                    <span class="date">{{ event.dateStart|localizeddate('full', 'short') }} :</span>
+
                     <h2>
                         <a href="{{ path('agenda_show_event', { 'slug': event.slug }) }}"
                            title="{{ event.title }}">{{ event.title }}</a>
