--- a/templates/members/list.html.twig
+++ b/templates/members/list.html.twig
@@ -5,7 +5,7 @@
 {%- endblock title %}
 
 {% block body %}
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
         <h1 class="h2">Listes des membres</h1>
     </div>
 
