--- a/templates/members/members_layout.html.twig
+++ b/templates/members/members_layout.html.twig
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link rel="shortcut icon" href="{{ asset('bundles/amlweb/ico/aml_favicon.ico') }}"/>
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
 
     <!-- Latest compiled and minified JavaScript -->
@@ -24,94 +24,95 @@
 
 </head>
 <body>
-<div id="mdb-preloader" class="flex-center">
-    <div id="preloader-markup"></div>
-</div>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">{{ site_name }}</a>
+<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar">
 
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <div id="navbar" class="avbar-nav px-3">
-            <ul class="nav navbar-nav navbar-right">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">
+        <img src="{{ asset('images/logo_aml87_black.png') }}" height="60" alt="{{ site_name }}  "/>
+    </a>
+
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        <div class="navbar-nav-scroll">
+            <ul class="navbar-nav bd-navbar-nav flex-row">
                 <li>
                     {% if app.user %}
-                    {{ 'layout.welcome_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
+                        {{ 'layout.welcome_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
                     {% endif %}
                 </li>
-                <li>
-                    <a class="nav-link" href="{{ path('app_members_area_logout') }}">
-                        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                    </a>
-                </li>
             </ul>
-        </div><!--/.navbar-collapse -->
-        {% endif %}
-    </nav>
-    <div class="container-fluid">
-        <div class="row">
+        </div>
+        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+            <li>
+                <a class="btn btn-info btn-rounded btn-sm waves-effect waves-light"
+                   href="{{ path('app_members_area_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            </li>
+        </ul>
+    {% endif %}
+</header>
+<div class="container-fluid">
+    <div class="row flex-xl-nowrap">
+        <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
 
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-                <div class="sidebar-sticky">
+            <nav class="bd-links">
 
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link" href="#">Agenda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Bibliothèque de partitions</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Documents AML</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Mes présences</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{{ path('aml_users_members_list') }}">Liste des membres</a></li>
-                        {% if is_granted('ROLE_SUPER_ADMIN') %}
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_members_agenda') }}">Agenda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Bibliothèque de partitions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Documents AML</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Mes présences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('aml_users_members_list') }}">Liste des
+                            membres</a></li>
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
                         <li class="nav-item"><a class="nav-link" href="{{ path('easyadmin') }}">Admin</a></li>
-                        {% endif %}
-                    </ul>
+                    {% endif %}
+                </ul>
 
-                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>Mes informations</span>
-                        <a class="d-flex align-items-center text-muted" href="#">
-                            <span data-feather="plus-circle"></span>
-                        </a>
-                    </h6>
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Mes informations</span>
+                    <a class="d-flex align-items-center text-muted" href="#">
+                        <span data-feather="plus-circle"></span>
+                    </a>
+                </h6>
 
-                    <ul class="nav flex-column mb-2">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('fos_user_profile_show') }}">Vérifier mes informations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">Mettre à jour mes informations</a>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="nav flex-column mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('fos_user_profile_show') }}">Vérifier mes informations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('fos_user_profile_edit') }}">Mettre à jour mes
+                            informations</a>
+                    </li>
+                </ul>
+
             </nav>
 
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <!-- CONTENT HERE -->
-                {% for flashMessage in app.session.flashbag.get('success') %}
-                    <div class="alert alert-success">
-                        {{ flashMessage }}
-                    </div>
-                {% endfor %}
-                {% for flashMessage in app.session.flashbag.get('notice') %}
-                    <div class="alert alert-error">
-                        {{ flashMessage }}
-                    </div>
-                {% endfor %}
-                {% for flashMessage in app.session.flashbag.get('info') %}
-                    <div class="alert alert-info">
-                        {{ flashMessage }}
-                    </div>
-                {% endfor %}
-                {% block body %}{% endblock %}
-            </main>
-        </div>
-    </div>
 
-    <script src="{{ asset('build/members-area.js') }}" type="text/javascript"></script>
+        </div>
+
+        <main role="main" class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content">
+            <!-- CONTENT HERE -->
+            {% for flashMessage in app.session.flashbag.get('success') %}
+                <div class="alert alert-success">
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+            {% for flashMessage in app.session.flashbag.get('notice') %}
+                <div class="alert alert-error">
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+            {% for flashMessage in app.session.flashbag.get('info') %}
+                <div class="alert alert-info">
+                    {{ flashMessage }}
+                </div>
+            {% endfor %}
+            {% block body %}{% endblock %}
+        </main>
+    </div>
+</div>
+
+<script src="{{ asset('build/members-area.js') }}" type="text/javascript"></script>
+
 </body>
 </html>
