Assets: clean JS & CSS

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -1,27 +1,4 @@
 
-// Bootstrap
-
-// customize some Bootstrap variables
-//$brand-primary: darken(#428bca, 20%)
-//
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/"
-
-$aml-css-images: "assets/images"
-//
-//// set if you're also including font-awesome
-//$fa-font-path: "~font-awesome/fonts"
-
-@import "~bootstrap/scss/bootstrap"
-
-@import 'common'
-@import 'blog'
-@import 'discography'
-@import 'agenda'
-@import 'contact'
-
-@import 'text'
-
-@import 'variables'
-@import 'reset'
-
-@import 'CSS:~cd-pretty-photo/index'
+@import "variables"
+@import "bootstrap"
+@import "components"
