--- a/assets/css/members-area.sass
+++ b/assets/css/members-area.sass
@@ -1,15 +1,5 @@
-// Bootstrap
-
-// customize some Bootstrap variables
-//$brand-primary: darken(#428bca, 20%)
-//
-$icon-font-path: "~assets/fonts/bootstrap/"
-
-$aml-css-images: "assets/images"
-
-//// set if you're also including font-awesome
-$fa-font-path: "~font-awesome/fonts"
-
+@import "variables"
+@import "bootstrap"
 
 @import "~bootstrap/scss/bootstrap"
 @import "~mdbootstrap/scss/mdb"
