--- a/templates/members/members_layout.html.twig
+++ b/templates/members/members_layout.html.twig
@@ -6,19 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ block('title') }} {{ site_name }}">
 
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
-    </script>
-    <![endif]-->
-
     <!-- Le styles -->
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
-
-    <!-- Latest compiled and minified JavaScript -->
-    <link href="{{ asset('build/members-area-style.css') }}" rel="stylesheet"/>
-
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+        {{ encore_entry_link_tags("members-area") }}
+    {% endblock %}
 
     {% block headerJs %}{% endblock %}
 
@@ -84,9 +77,7 @@
                             informations</a>
                     </li>
                 </ul>
-
             </nav>
-
 
         </div>
 
@@ -112,7 +103,8 @@
     </div>
 </div>
 
-<script src="{{ asset('build/members-area.js') }}" type="text/javascript"></script>
-
+{% block javascripts %}
+    {{ encore_entry_script_tags("members-area") }}
+{% endblock %}
 </body>
 </html>
